[gd_scene load_steps=3 format=3 uid="uid://d0tdtopuy76pi"]

[ext_resource type="Texture2D" uid="uid://dx47fpaq6m2u7" path="res://icon.svg" id="1_rojcq"]
[ext_resource type="Script" path="res://Scenes/card/card.gd" id="1_ya4js"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ya4js")

[node name="Pivot" type="Control" parent="."]
anchors_preset = 0

[node name="Panel" type="Panel" parent="Pivot"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 60)

[node name="MarginContainer" type="MarginContainer" parent="Pivot/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Pivot/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pivot/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Title"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Pivot/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_rojcq")
expand_mode = 5
stretch_mode = 5

[node name="Price" type="Label" parent="Pivot/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -9.0
offset_bottom = 22.0
grow_horizontal = 0
pivot_offset = Vector2(19, 44)
theme_override_font_sizes/font_size = 15
text = "3"
metadata/_edit_lock_ = true

[node name="HP" type="Label" parent="Pivot/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -22.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(19, 44)
theme_override_font_sizes/font_size = 15
text = "3"
metadata/_edit_lock_ = true

[node name="Attack" type="Label" parent="Pivot/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -22.0
offset_right = 9.0
grow_vertical = 0
pivot_offset = Vector2(19, 44)
theme_override_font_sizes/font_size = 15
text = "3"
metadata/_edit_lock_ = true

[connection signal="gui_input" from="Pivot/Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Pivot/Panel" to="." method="_on_panel_mouse_entered"]
